wip: Added Mercure support
This is a proof of concept. It highlights changed entitities in index
view.

Mercure : https://symfony.com/doc/current/mercure.html

--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -30,6 +30,14 @@
 
     {% block head_javascript %}
         <script src="{{ asset('app.js', ea.assets.defaultAssetPackageName) }}"></script>
+        <script>
+            const eventSource = new EventSource("{{ mercure(mercure_topic)|escape('js') }}");
+            eventSource.onmessage = event => {
+                const id = JSON.parse(event.data).id;
+                const entity = document.querySelector('tr[data-id="'+id+'"]');
+                if (entity) entity.className = "table-danger";
+            }
+        </script>
     {% endblock head_javascript %}
 
     {% block configured_javascripts %}
