--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -55,7 +55,7 @@
         data-ea-content-width="{{ ea.crud.contentWidth ?? ea.dashboardContentWidth ?? 'normal' }}"
         data-ea-sidebar-width="{{ ea.crud.sidebarWidth ?? ea.dashboardSidebarWidth ?? 'normal' }}"
         data-ea-dark-scheme-is-enabled="{{ ea.dashboardHasDarkModeEnabled ? 'true' : 'false' }}"
-        data-ea-mercure-url="{{ mercure(mercure_topic) }}"
+        data-ea-mercure-url="{{ ea_call_function_if_exists('mercure', mercure_topic) }}"
     >
     {% block javascript_page_layout %}
         <script src="{{ asset('page-layout.js', ea.assets.defaultAssetPackageName) }}"></script>
